# strobealign

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  GitVersion.cmake  README.md  build.rs  evaluation.md  main.cpp  pixi.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  cpp.yml  rust.yml
cpp/: aligner.cpp  aln.cpp  chain.cpp  cmdline.hpp  dumpstrobes.cpp  exceptions.hpp  fastq.cpp  hash.hpp  hits.cpp  index.hpp  indexparameters.cpp  indexparameters.hpp  insertsizedistribution.cpp  main.cpp  mappingparameters.hpp  mcsstrategy.hpp  paf.cpp  pc.hpp  randstrobes.cpp  randstrobes.hpp  refs.hpp  sam.hpp  timer.hpp  tmpdir.hpp  unused.cpp  version.hpp.in
cpp/ext/: README.md
cpp/ext/kseq++/: config.hpp  kseq++.hpp
cpp/ext/ssw/: ssw.c  ssw_avx2.c  ssw_avx2.h
cpp/python/: CMakeLists.txt  strobealign.cpp
cpp/python/strobealign/: __init__.py
ext/: README.md  kseq++.hpp  ksw2.h  seqio.hpp  wy.hpp
ext/block-aligner/: Cargo.toml
ext/block-aligner/c/: Cargo.toml  block_aligner.h
ext/block-aligner/src/: ffi.rs  scan_block.rs  scores.rs
ext/hyperloglog/: hyperloglog.hpp  murmur3.h
ext/kseq++/: kseq++.hpp  seqio.hpp
ext/poolstl/: poolstl.hpp
ext/ssw/: ssw.c
ext/zstr/src/: zstr.hpp
python/: .gitignore  CMakeLists.txt  Cargo.toml  pyproject.toml
python/src/: lib.rs
source/: aln.cpp  aln.hpp  config.hpp  index.cpp  index.hpp  ksw2_extz2_sse.c  pc.cpp  pc.hpp  robin_hood.h  ssw_cpp.cpp  ssw_cpp.h  xxhash.h
src/: aligner.cpp  aligner.hpp  aligner.rs  alignment.cpp  alignment.hpp  aln.cpp  aln.hpp  arguments.hpp  baligner.cpp  baligner.hpp  buildconfig.hpp.in  chain.cpp  chain.hpp  chain.rs  chainer.rs  chaining.cpp  cigar.cpp  cigar.hpp  cigar.rs  cmdline.cpp  cmdline.hpp  details.rs  dumprandstrobes.cpp  dumpstrobes.cpp  exceptions.cpp  exceptions.cpp~  exceptions.hpp  exceptions.hpp~  fasta.cpp  fasta.hpp  fasta.rs  fastq.cpp  fastq.hpp  fastq.rs  hash.rs  hit.rs  hits.cpp  hits.hpp  index.cpp  index.hpp  (+67 more)
src/io/: fasta.rs  fastq.rs  mod.rs  paf.rs  reads.rs  record.rs  sam.rs  xopen.rs
src/python/: CMakeLists.txt  strobealign.cpp
src/seeding/: hash.rs  mod.rs  parameters.rs  strobes.rs  syncmers.rs
src/ssw/: mod.rs  raw.rs
tests/: README.md  baseline-commit.txt  compare-baseline.sh  download.sh  interleaved.fq  phix.1.fastq  phix.2.fastq  phix.abun.pe.txt  phix.abun.se.txt  phix.fasta  phix.mcs.se.paf  phix.mcsrescue.se.paf  phix.pe.paf  phix.pe.sam  phix.se.paf  phix.se.sam  phix.tags.fastq  phix.tags.sam  run.sh  rust.sh  samdiff.py  test.rs  test_aligner.cpp  test_aln.cpp  test_bindings.py  test_cigar.cpp  test_indexparameters.cpp  test_input.cpp  test_randstrobes.cpp  test_refs.cpp  test_sam.cpp  tests.cpp
