[workspace]
members = ["python"]

[package]
name = "rstrobes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
fastrand = { version = "2.0.1", default-features = false }
fxhash = "0.2.1"
log = { version = "0.4.20", features = ["std"]}
memchr = "2.7.1"
sigpipe = "0.1.3"
xxhash-rust = { version = "0.8.5", features = ["xxh64"] }
flate2 = "1.0"
thiserror = "2.0.11"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
temp-file = "0.1.9"

[profile.release]
debug = true
codegen-units = 1
lto = true

[profile.dev]
opt-level = 1
