[workspace]
members = ["python"]

[package]
name = "strobealign"
version = "0.18.0-alpha"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
fastrand = { version = "2.0.1", default-features = false }
log = { version = "0.4.20", features = ["std"]}
memchr = "2.7.1"
sigpipe = "0.1.3"
flate2 = { version = "1.0", features = ["zlib-rs"]}
thiserror = "2.0.11"
rayon = "1.11.0"
mimalloc = "0.1.48"
isal-rs = "0.5.3"
[target.'cfg(target_arch = "wasm32-wasi")'.dependencies]
block-aligner = { version = "0.5", features = ["simd_wasm"] }
[target.'cfg(target_arch = "x86_64")'.dependencies]
block-aligner = { version = "0.5", features = ["simd_avx2"] }
[target.'cfg(target_arch = "aarch64")'.dependencies]
block-aligner = { version = "0.5", features = ["simd_neon"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
temp-file = "0.1.9"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = true
